# TeamPlay

./: CMakeLists.txt  package.xml
include/rhoban_team_play/: team_play.h
include/starkit_team_play/: team_play.h
src/rhoban_team_play/: team_play.cpp
src/starkit_team_play/: team_play.cpp
