<?xml version="1.0"?>
<package>
  <name>rhoban_team_play</name>
  <version>0.0.0</version>
  <description>
    Rhoban Team Play core
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>

  <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils.git -->

  <run_depend>rhoban_utils</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>

