<?xml version="1.0"?>
<package>
  <name>starkit_team_play</name>
  <version>0.0.0</version>
  <description>
    Starkit Team Play core
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>

  <build_depend>starkit_utils</build_depend> <!-- StarkitRobots/utils.git -->

  <run_depend>starkit_utils</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>

